ipc/ipdl/test/ipdl/error/PExtendedAttrRepeated.ipdl
//error: Repeated extended attribute `RefCounted'

[RefCounted, RefCounted, ChildProc=any]
async protocol PExtendedAttrRepeated {
parent:
    async Msg();
};
